--- a/.github/workflows/fastbuild_6.1.118.yml
+++ b/.github/workflows/fastbuild_6.1.118.yml
@@ -71,7 +71,7 @@ on:
         description: '是否启用三星SSG IO调度器及Re-Kernel支持(0=均不安装,1=安装SSG IO调度器,2=安装Re-Kernel,3=均安装,默认1)'
         required: true
         type: choice
-        default: '3'
+        default: '1'
         options:
           - '0'
           - '1'
@@ -81,7 +81,7 @@ on:
         description: '是否开启内核级基带保护(阻止一切对非用户分区的写入，有效防止格机)'
         required: true
         type: boolean
-        default: 'false'
+        default: 'true'
       kernel_suffix:
         description: '内核后缀(留空默认,开头别加连字符,勿加空格等影响指令运行的保留字符)'
         required: false
